* jump into location from map * fixed translations for locations

--- a/app/states/map/map.scss
+++ b/app/states/map/map.scss
@@ -33,18 +33,30 @@
     .selected-loc > div {
         width: 100%;
         height: 100%;
+        border-bottom-width:0px!important;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        padding:0px;
     }
 
     .location-description {
         background-color: #333;
+        padding:0px;
+        height:80%;
         padding:4px;
-        .locationName, .locationPreview {
+        .locationName, .locationPreview,  .close {
             font-weight: bold;
             color: white;
+            padding-top:10px;
+        }
+        .close{
+            padding: 10px; // bigger clickarea
+            position: absolute;
+            z-index: 4;
+            right:0px;
+            top:0px;
         }
     }
 
